Add JS event test for InputMethodController::SetCompositionFromExistingText()

changwan@ reported a bug (crbug.com/764439) that
InputMethodController::SetCompositionFromExistingText (used by Android IMEs to
mark the current word with a composition range when you move the cursor) does
not fire the compositionstart or compositionupdate events. This CL adds a layout
test for the current behavior. I will write a separate CL to fix the bug and
update the test with the new behavior.

Bug: 764439
Change-Id: I17fae44210cea9383b41cea2bd7974c1db52bea5