content/shell/test_runner/text_input_controller.cc
@@ -49,6 +49,7 @@ class TextInputControllerBindings
   void UnmarkAndUnselectText();
   void DoCommand(const std::string& text);
   void SetMarkedText(const std::string& text, int start, int length);
+  void SetMarkedTextFromExistingText(int start, int length);
   bool HasMarkedText();
   std::vector<int> MarkedRange();
   std::vector<int> SelectedRange();
@@ -101,6 +102,8 @@ TextInputControllerBindings::GetObjectTemplateBuilder(v8::Isolate* isolate) {
                  &TextInputControllerBindings::UnmarkAndUnselectText)
       .SetMethod("doCommand", &TextInputControllerBindings::DoCommand)
       .SetMethod("setMarkedText", &TextInputControllerBindings::SetMarkedText)
+      .SetMethod("setMarkedTextFromExistingText",
+                 &TextInputControllerBindings::SetMarkedTextFromExistingText)
       .SetMethod("hasMarkedText", &TextInputControllerBindings::HasMarkedText)
       .SetMethod("markedRange", &TextInputControllerBindings::MarkedRange)
       .SetMethod("selectedRange", &TextInputControllerBindings::SelectedRange)
@@ -136,6 +139,12 @@ void TextInputControllerBindings::SetMarkedText(const std::string& text,
                                                 int length) {
   if (controller_)
     controller_->SetMarkedText(text, start, length);
+}
+
+void TextInputControllerBindings::SetMarkedTextFromExistingText(int start,
+                                                                int end) {
+  if (controller_)
+    controller_->SetMarkedTextFromExistingText(start, end);
 }
 
 bool TextInputControllerBindings::HasMarkedText() {
@@ -239,6 +248,13 @@ void TextInputController::SetMarkedText(const std::string& text,
   if (auto* controller = GetInputMethodController()) {
     controller->SetComposition(web_text, ime_text_spans, blink::WebRange(),
                                start, start + length);
+  }
+}
+
+void TextInputController::SetMarkedTextFromExistingText(int start, int end) {
+  if (auto* controller = GetInputMethodController()) {
+    controller->SetCompositionFromExistingText(
+        std::vector<blink::WebImeTextSpan>(), start, end);
   }
 }
 
